# langchain-agent-demo

./: .env.example  .gitignore  api_app.py  chatbot.py  chatbot_test.py  main.py  pyproject.toml  rag.py  streamlit_app.py  tools.py
.streamlit/: config.toml
docs/: Dify安装教程_Windows.md  原神深渊信息.txt
static/: index.html
